--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
+    "react-rangeslider": "^2.2.0",
     "styled-components": "^5.1.1"
   }
 }
